tests/fixtures/invalid/str_bitor_int.py
# Cannot bitwise OR Str and Int
x: str = "hello" | 1
